# lingxi-bl-firmware

./: .gitignore  Lingxi_N6.ioc  Lingxi_N6_minimal.ioc  Lingxi_N6_user.ioc  README.html  README.md  lingxi-bl-firmware.ioc  stm32n6_template.ioc
docs/: HAL_Driver_Development_Guide.html  HAL_Driver_Development_Guide.md  bootloader_design.md  dev_environment.html  dev_environment.md  hal_to_ll_assessment.md  software_design.md  test_framework.html  test_framework.md  version_management.html  version_management.md
esp32/: CMakeLists.txt
esp32/main/: CMakeLists.txt  main.c
shared/protocol/: CMakeLists.txt  lingxi_protocol.c  lingxi_protocol.h
shared/utils/: CMakeLists.txt  byteorder.c  byteorder.h  crc16.c  crc16.h  debug_log.c  debug_log.h  error_codes.h  ring_buffer.c  ring_buffer.h
stm32/: CMakeLists.txt  Makefile
stm32/App/inc/: app_camera.h  app_control.h  app_freertos.h  app_fusion.h  app_npu.h  app_stream.h  bsp_bmp585.h  bsp_mipi_csi.h  bsp_ospi.h  bsp_sdio.h  bsp_sdmmc2.h  bsp_sdram.h  bsp_tof.h  bsp_uwb.h  lingxi_bl.h
stm32/App/src/: app_camera.c  app_control.c  app_freertos.c  app_fusion.c  app_npu.c  app_stream.c  bsp_bmp585.c  bsp_mipi_csi.c  bsp_ospi.c  bsp_sdio.c  bsp_sdmmc2.c  bsp_sdram.c  bsp_tof.c  bsp_uwb.c
stm32/Bootloader/: README.md
stm32/Bootloader/Inc/: bl_config.h  bl_flash.h  bl_protocol.h
stm32/Bootloader/Src/: STM32N657X0HXQ_BOOTLOADER.ld  bl_flash.c  bl_main.c  bl_protocol.c
stm32/Core/Inc/: FreeRTOSConfig.h  dma_config.h  fmc_sdram.h  gpio_irq.h  gpio_uart.h  i2c1_tof.h  mipi_csi2.h  pwr_mgmt.h  rcc_config.h  sdmmc_driver.h  spi1_uwb.h  spi2_sdcard.h  stm32n6xx_hal_conf.h  xspi_flash.h
stm32/Core/Src/: dma_config.c  fmc_sdram.c  gpio_irq.c  gpio_uart.c  i2c1_tof.c  main.c  mipi_csi2.c  pwr_mgmt.c  rcc_config.c  sdmmc_driver.c  spi1_uwb.c  spi2_sdcard.c  system_stm32n6xx.c  system_stm32n6xx_ns.c  xspi_flash.c
tests/: Makefile  test_runner.c
tests/mocks/: mock_sdio.c  mock_sdio.h
(+26 files in other folders)
